# RoverRobot

./: .gitignore  README.md  README.md~45602791c5115c7a9232e08fc46562a3e9cead5a  ldr.c  reader.py  srf02.py
RoverApp/: settings.gradle
RoverApp/app/: build.gradle
RoverApp/app/src/androidTest/java/com/example/rescuerobotfinal/: ExampleInstrumentedTest.java
RoverApp/app/src/androidTest/java/com/example/roverapp/: ExampleInstrumentedTest.kt
RoverApp/app/src/main/: AndroidManifest.xml
RoverApp/app/src/main/java/com/example/rescuerobotfinal/: MainActivity.java  loginScreen.java  settings.java
RoverApp/app/src/main/java/com/example/roverapp/: MainActivity.kt
RoverApp/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  loginscreen.xml
RoverApp/app/src/main/res/layout-land/: activity_main.xml
RoverApp/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
RoverApp/app/src/main/res/values/: strings.xml
RoverApp/app/src/test/java/com/example/rescuerobotfinal/: ExampleUnitTest.java
RoverApp/app/src/test/java/com/example/roverapp/: ExampleUnitTest.kt
RoverApp/gradle/wrapper/: gradle-wrapper.properties
RowServer/: CMakeLists.txt  distance.c  encoder.c  kompass.c  light.c  main.cpp  mainOld.cpp  oled.c
RowServer/Python/: Camera.py  blade.py  color.py  filter_cpp.cpp  picamera.py
RowServer/Python/OpenCV Python/: colorTracking.py
